# HowToMakeSimulinkToC

./: README.md
sum_test_grt_rtw/: CMakeLists.txt  buildInfo.mat  builtin_typeid_types.h  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  main.c  multiword_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat  sum_test.c  sum_test.h  sum_test_private.h  sum_test_types.h
sum_test_grt_rtw/rtw/c/accel/: accel.tlc
sum_test_grt_rtw/rtw/c/ert/: ert.tlc
sum_test_grt_rtw/rtw/c/grt/: .gitignore  grt.tlc  makefile_gnu.mk
sum_test_grt_rtw/rtw/c/grt_malloc/: .gitignore  grt_malloc.tlc  makefile_gnu.mk
sum_test_grt_rtw/rtw/c/modelref/: modelrefsim.tlc
sum_test_grt_rtw/rtw/c/raccel/: raccel.h  raccel.tlc  raccel_main.c  raccel_mat.c  raccel_parallel.tlc  raccel_sup.c  raccel_sup.h
sum_test_grt_rtw/rtw/c/rsim/: .gitignore  makefile_gnu.mk  rsim.tlc  rsim_main.c  rsim_mat.c  rsim_sup.c
sum_test_grt_rtw/rtw/c/rtwsfcn/: rtwsfcn.tlc
sum_test_grt_rtw/rtw/c/tlc/blocks/: actuator.tlc  arrayplot.tlc  constant.tlc  dss.tlc  dzp.tlc  fromfile.tlc  fromspreadsheet.tlc  fromwks.tlc  gensfun.tlc  intrusive_accessor.tlc  linlib.tlc  logging_sup.tlc  look_up.tlc  lookup2d.tlc  lookup_nd.tlc  matlabfn.tlc  mlscript.tlc  modelref.tlc  msfunction.tlc  opaque.tlc  outport.tlc  pmcomponent.tlc  pmioport.tlc  (+13 more)
sum_test_grt_rtw/rtw/c/tools/: blankVC16.0Project64.vcxproj  blankVC17.0Project64.vcxproj  lcc-win64.xml  macsdkver.pl  unixtools.mk
sum_test_grt_rtw/tmwinternal/: simulink_cache.xml
(+293 files in other folders)
